--- a/dijkstra.ipynb
+++ b/dijkstra.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db=pg2.connect(host='localhost', dbname='problem',user='postgres',password='kk940107!!',port=5432)\n",
+    "db=pg2.connect(host='localhost', dbname='problem',user='postgres',password='',port=5432)\n",
     "db.autocommit=True\n",
     "cursor=db.cursor()"
    ]
